// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`identifier helpers fromArray() should return the list of identifiers with a table name 1`] = `
Object {
  "glue": Object {
    "sql": ", ",
    "type": "SLONIK_TOKEN_SQL",
    "values": Array [],
  },
  "members": Array [
    Object {
      "names": Array [
        "my_table",
        "first",
      ],
      "type": "SLONIK_TOKEN_IDENTIFIER",
    },
    Object {
      "names": Array [
        "my_table",
        "secondIdent",
      ],
      "type": "SLONIK_TOKEN_IDENTIFIER",
    },
    Object {
      "names": Array [
        "my_table",
        "third_ident",
      ],
      "type": "SLONIK_TOKEN_IDENTIFIER",
    },
  ],
  "type": "SLONIK_TOKEN_LIST",
}
`;

exports[`identifier helpers fromArray() should return the list of identifiers without a table name 1`] = `
Object {
  "glue": Object {
    "sql": ", ",
    "type": "SLONIK_TOKEN_SQL",
    "values": Array [],
  },
  "members": Array [
    Object {
      "names": Array [
        "first",
      ],
      "type": "SLONIK_TOKEN_IDENTIFIER",
    },
    Object {
      "names": Array [
        "secondIdent",
      ],
      "type": "SLONIK_TOKEN_IDENTIFIER",
    },
    Object {
      "names": Array [
        "third_ident",
      ],
      "type": "SLONIK_TOKEN_IDENTIFIER",
    },
  ],
  "type": "SLONIK_TOKEN_LIST",
}
`;

exports[`identifier helpers fromObject() should return the list of identifiers based on object keys 1`] = `
Object {
  "glue": Object {
    "sql": ", ",
    "type": "SLONIK_TOKEN_SQL",
    "values": Array [],
  },
  "members": Array [
    Object {
      "names": Array [
        "first",
      ],
      "type": "SLONIK_TOKEN_IDENTIFIER",
    },
    Object {
      "names": Array [
        "secondIdent",
      ],
      "type": "SLONIK_TOKEN_IDENTIFIER",
    },
    Object {
      "names": Array [
        "third_ident",
      ],
      "type": "SLONIK_TOKEN_IDENTIFIER",
    },
  ],
  "type": "SLONIK_TOKEN_LIST",
}
`;

exports[`identifier helpers fromObject() should return the list of identifiers based on object keys including a table name 1`] = `
Object {
  "glue": Object {
    "sql": ", ",
    "type": "SLONIK_TOKEN_SQL",
    "values": Array [],
  },
  "members": Array [
    Object {
      "names": Array [
        "my_table",
        "first",
      ],
      "type": "SLONIK_TOKEN_IDENTIFIER",
    },
    Object {
      "names": Array [
        "my_table",
        "secondIdent",
      ],
      "type": "SLONIK_TOKEN_IDENTIFIER",
    },
    Object {
      "names": Array [
        "my_table",
        "third_ident",
      ],
      "type": "SLONIK_TOKEN_IDENTIFIER",
    },
  ],
  "type": "SLONIK_TOKEN_LIST",
}
`;

exports[`identifier helpers fromSet() should return the list of identifiers with a table name 1`] = `
Object {
  "glue": Object {
    "sql": ", ",
    "type": "SLONIK_TOKEN_SQL",
    "values": Array [],
  },
  "members": Array [
    Object {
      "names": Array [
        "my_table",
        "first",
      ],
      "type": "SLONIK_TOKEN_IDENTIFIER",
    },
    Object {
      "names": Array [
        "my_table",
        "secondIdent",
      ],
      "type": "SLONIK_TOKEN_IDENTIFIER",
    },
    Object {
      "names": Array [
        "my_table",
        "third_ident",
      ],
      "type": "SLONIK_TOKEN_IDENTIFIER",
    },
  ],
  "type": "SLONIK_TOKEN_LIST",
}
`;

exports[`identifier helpers fromSet() should return the list of identifiers without a table name 1`] = `
Object {
  "glue": Object {
    "sql": ", ",
    "type": "SLONIK_TOKEN_SQL",
    "values": Array [],
  },
  "members": Array [
    Object {
      "names": Array [
        "first",
      ],
      "type": "SLONIK_TOKEN_IDENTIFIER",
    },
    Object {
      "names": Array [
        "secondIdent",
      ],
      "type": "SLONIK_TOKEN_IDENTIFIER",
    },
    Object {
      "names": Array [
        "third_ident",
      ],
      "type": "SLONIK_TOKEN_IDENTIFIER",
    },
  ],
  "type": "SLONIK_TOKEN_LIST",
}
`;
